@@ -7,7 +7,9 @@
 extern "C" {
 #endif
 
+#ifndef Py_LIMITED_API
 PyAPI_FUNC(void) _PyImportZip_Init(void);
+#endif /* !Py_LIMITED_API */
 
 PyMODINIT_FUNC PyInit_imp(void);
 PyAPI_FUNC(long) PyImport_GetMagicNumber(void);
