@@ -5,10 +5,12 @@
 extern "C" {
 #endif
 
+#ifndef Py_LIMITED_API
 /* Returns a str() containing the hex representation of argbuf. */
 PyAPI_FUNC(PyObject*) _Py_strhex(const char* argbuf, const Py_ssize_t arglen);
 /* Returns a bytes() containing the ASCII hex representation of argbuf. */
 PyAPI_FUNC(PyObject*) _Py_strhex_bytes(const char* argbuf, const Py_ssize_t arglen);
+#endif /* !Py_LIMITED_API */
 
 #ifdef __cplusplus
 }
